# tanmatsu

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Pipfile  README.md  debug.py  draw.py  geometry.py  get_keycodes.py  main.py  pyproject.toml  screenbuffer.py  size.py  style.py  tanmatsu.py  theme.py
demos/widgets/: flexbox.py  list.py  tabbox.py  test.py  textbox.py  textlog.py
docs/source/: conf.py  debug.rst  geometry.rst  index.rst  input.rst  screenbuffer.rst  size.rst  style.rst  tanmatsu.rst  terminal.rst  theme.rst  wctools.rst  widgets.rst
docs/source/terminal/: input.rst  output.rst
docs/source/widgets/: base.rst  box.rst  button.rst  container.rst  flexbox.rst  list.rst  scrollable.rst  tabbox.rst  textbox.rst  textlog.rst  widget.rst
logo/: logo.pxd
scripts/githooks/: pre-commit
tanmatsu/: __init__.py  debug.py  draw.py  geometry.py  input.py  output.py  screenbuffer.py  size.py  style.py  tanmatsu.py  theme.py  wctools.py
tanmatsu/widgets/: __init__.py  base.py  box.py  button.py  container.py  flexbox.py  list.py  scrollable.py  tabbox.py  textbox.py  textlog.py
terminal/: __init__.py  input.py  output.py
test/: test_focus_switching.py
tests/: test_focus_switching.py  utils.py
widgets/: __init__.py  base.py  box.py  button.py  container.py  flexbox.py  list.py  scrollable.py  tabbox.py  textbox.py  textlog.py
