[tool.poetry]
name = "tanmatsu"
version = "0.1.1"
description = "Declarative Terminal User Interface Library"
authors = ["snowdrop4 <82846066+snowdrop4@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/snowdrop4/tanmatsu"
documentation = "https://tanmatsu.readthedocs.io/en/latest/"
classifiers = [
	"Topic :: Software Development :: User Interfaces",
	"Topic :: Terminals",
	"Environment :: Console",
	"Operating System :: POSIX :: Linux",
]

[tool.poetry.dependencies]
python = "^3.11"
"tri.declarative" = "^5.0"
parsy = "~1.3.0"
wcwidth = "^0.2"

[tool.poetry.dev-dependencies]
sphinx = "^5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
